--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
     "style": "^0.0.3",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0"
